<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="tts_text" translatable="false">This is a demo of Microsoft Cognitive Services Text to Speech API.</string>
    <string name="tts_text_zh" translatable="false">松开手指,取消发送.</string>
    <string name="play_button_name" translatable="false">Play</string>
    <string name="stop_button_name" translatable="false">Stop</string>
    <string name="tts_text_ar" translatable="false">يتعذر حذف جهات الاتصال من حساباتك المخصصة للقراءة فقط، ولكن يمكن إخفاؤها</string>
    <string name="tts_text_bg" translatable="false">Този контакт е само за четене. Не може да бъде изтрит, но можете да го скриете</string>
    <string name="tts_text_ca" translatable="false">"Vols desar els canvis que ja has aplicat i enllaçar els contactes seleccionats?"</string>
    <string name="tts_text_cs" translatable="false">"Chcete uložit provedené změny, zrušit propojení kontaktu a vytvořit několik samostatných kontaktů?"</string>
    <string name="tts_text_da" translatable="false">"Vil du gemme de ændringer, du allerede har foretaget, og sammenflette med den valgte kontaktperson?"</string>
    <string name="tts_text_fr" translatable="false">"Ce contact est en lecture seule. Il ne peut pas être supprimé, mais vous pouvez le masquer."</string>
    <string name="tts_text_es" translatable="false">Este contacto es de solo lectura. No se puede eliminar, pero sí ocultar.</string>
    <string name="tts_text_hi" translatable="false">\"क्या आप पहले से किए गए बदलावों को सहेजना और इस संपर्क को एकाधिक संपर्कों में अनलिंक करना चाहते हैं?</string>
    <string name="tts_text_vi" translatable="false">Bạn có muốn lưu các thay đổi mình đã thực hiện và hủy liên kết liên hệ này thành nhiều liên hệ không</string>
    <string name="tts_text_hk" translatable="false">這是唯讀聯絡人，因此無法刪除，但可加以隱藏</string>
    <string name="tts_text_tw" translatable="false">您要儲存目前所做變更，並將這個聯絡人的連結取消，還原為多筆聯絡人資料嗎</string>
    <string name="tts_text_ru" translatable="false">"Сохранить изменения и разделить этот контакт?"</string>
    <string name="home_label">THome</string>
    <string name="final_response_error">Sorry,I didn\'t hear you clearly.</string>
    <string name="app_name">Translator</string>
    <string name="compose_message">Compse message</string>
    <string name="recoder_normal">Hold to Talk</string>
    <string name="recoder_recording">Release to Send</string>
    <string name="recoder_want_cancel">Release to Cancel</string>
    <string name="recoder_how_to_cancel">Slide up to cancel</string>
    <string name="recoder_too_short">Message too short</string>
    <string name="no_network">NO network!</string>
    <string name="need_wifi">PLS CONNECT WIFI!</string>
    <string name="stt_error">Sound to text error!</string>
    <string name="feedback_hardware">Hardware</string>
    <string name="feedback_auto_shutdown">Auto shutdown</string>
    <string name="feedback_network">Network</string>
    <string name="feedback_sound">Sound</string>
    <string name="feedback_translation">Translation</string>
    <string name="feedback_battery">Battery</string>
    <string name="feedback_others">Others</string>
    <string name="compose_auto_text">Auto report</string>
    <string name="compose_textsize_text">Font size</string>
    <string name="compose_end_text">Hang up</string>
    <string name="compose_end_other_text">Hang up other</string>
    <string name="compose_waiting">Waiting</string>
    <string name="text_size_small_text">Small</string>
    <string name="text_size_normal_text">Normal</string>
    <string name="text_size_large_text">Large</string>
    <string name="compose_no_net_title">No network!</string>
    <string name="compose_no_net_message">Please set the network!</string>
    <string name="home_transition_name" translatable="false">transition_name_1</string>
    <string name="language_name_zh_cn" translatable="false">"普通话"</string>
    <string name="language_name_zh_hk" translatable="false">"粤语"</string>
    <string name="language_name_en_us" translatable="false">"English (US)"</string>
    <string name="language_name_en_au" translatable="false">"English (AU)"</string>
    <string name="language_name_en_ca" translatable="false">"English (CA)"</string>
    <string name="language_name_en_gb" translatable="false">"English (UK)"</string>
    <string name="language_name_en_in" translatable="false">"English (IN)"</string>
    <string name="language_name_en_nz" translatable="false">"English (NZ)"</string>
    <string name="language_name_en_ie" translatable="false">"English (IE)"</string>
    <string name="language_name_ar_eg" translatable="false">"اللغة العربية(EG)"</string>
    <string name="language_name_da_dk" translatable="false">"Dansk(DK)"</string>
    <string name="language_name_de_de" translatable="false">"Deutsch(DE)"</string>
    <string name="language_name_es_es" translatable="false">"Español(ES)"</string>
    <string name="language_name_es_mx" translatable="false">"Español(MX)"</string>
    <string name="language_name_fi_fi" translatable="false">"Suomen"</string>
    <string name="language_name_fr_ca" translatable="false">"Français(CA)"</string>
    <string name="language_name_fr_fr" translatable="false">"Français(FR)"</string>
    <string name="language_name_it_it" translatable="false">"Italiano"</string>
    <string name="language_name_ja_jp" translatable="false">"日本語"</string>
    <string name="language_name_ko_kr" translatable="false">"한국어"</string>
    <string name="language_name_nl_nl" translatable="false">"Nederlands"</string>
    <string name="language_name_pl_pl" translatable="false">"Polski"</string>
    <string name="language_name_pt_br" translatable="false">"Português(BR)"</string>
    <string name="language_name_pt_pt" translatable="false">"Português(PT)"</string>
    <string name="language_name_ru_ru" translatable="false">"русский"</string>
    <string name="language_name_sv_se" translatable="false">"Svenska"</string>
    <string name="language_name_th_th" translatable="false">"ไทย"</string>
    <string name="language_name_cs_cz" translatable="false">"Čeština"</string>
    <string name="language_name_ro_ro" translatable="false">"Română"</string>
    <string name="language_name_hu_hu" translatable="false">"Magyar"</string>
    <string name="language_name_vi" translatable="false">"Tiếng Việt"</string>
    <string name="language_name_ar_sa" translatable="false">"لعربية(السعودية)"</string>
    <string name="language_name_in_id" translatable="false">"BahasaIndonesia"</string>
    <string name="language_name_ta" translatable="false">"தமிழ்(இந்தியா)"</string>
    <string name="language_name_hi_in" translatable="false">"हिन्दी(भारत)"</string>
    <string name="language_name_el_gr" translatable="false">"Ελληνικά"</string>
    <string name="language_name_ms_my" translatable="false">"Melayu"</string>
    <string name="language_name_ca_es" translatable="false">"Català(ES)"</string>
    <string name="language_name_nb_no" translatable="false">"norsk språk"</string>
    <string name="language_name_sk_sk" translatable="false">"slovenského jazyk"</string>
    <string name="language_name_bg_bg" translatable="false">"български"</string>
    <string name="language_name_he_il" translatable="false">"עברית(ישראל)"</string>
    <string name="language_name_tr_tr" translatable="false">"Türk dili"</string>
    <string name="language_name_hr_hr" translatable="false">"hrvatski"</string>
    <string name="language_name_sl_si" translatable="false">"Slovenščina"</string>
    <string name="language_code_zh_cn" translatable="false">zh-CN</string>
    <string name="language_code_zh_hk" translatable="false">zh-HK</string>
    <string name="language_code_en_us" translatable="false">en-US</string>
    <string name="language_code_en_au" translatable="false">en-AU</string>
    <string name="language_code_en_ca" translatable="false">en-CA</string>
    <string name="language_code_en_gb" translatable="false">en-GB</string>
    <string name="language_code_en_in" translatable="false">en-IN</string>
    <string name="language_code_en_nz" translatable="false">en-NZ</string>
    <string name="language_code_en_ie" translatable="false">en-IE</string>
    <string name="language_code_ar_eg" translatable="false">ar-EG</string>
    <string name="language_code_da_dk" translatable="false">da-DK</string>
    <string name="language_code_de_de" translatable="false">de-DE</string>
    <string name="language_code_es_es" translatable="false">es-ES</string>
    <string name="language_code_es_mx" translatable="false">es-MX</string>
    <string name="language_code_fi_fi" translatable="false">fi-FI</string>
    <string name="language_code_fr_ca" translatable="false">fr-CA</string>
    <string name="language_code_fr_fr" translatable="false">fr-FR</string>
    <string name="language_code_it_it" translatable="false">it-IT</string>
    <string name="language_code_ja_jp" translatable="false">ja-JP</string>
    <string name="language_code_ko_kr" translatable="false">ko-KR</string>
    <string name="language_code_nl_nl" translatable="false">nl-NL</string>
    <string name="language_code_pl_pl" translatable="false">pl-PL</string>
    <string name="language_code_pt_br" translatable="false">pt-BR</string>
    <string name="language_code_pt_pt" translatable="false">pt-PT</string>
    <string name="language_code_ru_ru" translatable="false">ru-RU</string>
    <string name="language_code_sv_se" translatable="false">sv-SE</string>
    <string name="language_code_th_th" translatable="false">th-TH</string>
    <string name="feedback_title">Improvement advice</string>
    <string name="user_protocol_title">User protocol</string>
    <string name="reset_factory_label">Reset factory</string>
    <string name="storage_save">Save</string>
    <string name="storage_clean_title">Clean memory</string>
    <string name="storage_clean">Clean data</string>
    <string name="storage_state">Storage state</string>
    <string name="save_type">Chat record</string>
    <string name="save_type_none">Not save</string>
    <string name="save_type_text">Text only</string>
    <string name="save_type_sound">Sound only</string>
    <string name="save_type_text_sound">Text and Sound</string>
    <string name="title_display_and_brightness">Display and brightness</string>
    <string name="title_battery_percentage">Battery percentage</string>
    <string name="title_languages">System languages</string>
    <string name="title_font_size">Font size</string>
    <string name="title_time_zone">Time zone</string>
    <string name="title_date_time">Date &amp; time</string>
    <string name="title_24_hour_format">Use 24-hour format</string>
    <string name="title_auto_time_zone">Automatic time</string>
    <string name="ota_update">Check for update</string>
    <string name="title_screen_timeout">Auto sleep</string>
    <string name="title_screen_timeout_battery">Battery</string>
    <string name="title_screen_timeout_charging">Charging</string>
    <string name="screen_time_2_mins">2 min</string>
    <string name="screen_time_5_mins">5 min</string>
    <string name="screen_time_10_mins">10 min</string>
    <string name="screen_time_30_mins">30 min</string>
    <string name="ota_latest_version">Your software is the latest version</string>
    <string name="ota_system_version">System version</string>
    <string name="ota_current_version_title">Current version</string>
    <string name="ota_check_version">Check update</string>
    <string name="ota_manual">Manual</string>
    <string name="ota_auto">Auto</string>
    <string name="ota_update_button">Update immediately</string>
    <string name="checkota_button">Check for update</string>
    <string name="ota_message_title">Version message</string>
    <string name="ota_discover_new_version">Discover new version</string>
    <string name="ota_goto">Redirect to</string>
</resources>