<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/storage_state" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/storage_state_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingStart="58dp" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/storage_clean_title" />

        <TextView
            android:id="@+id/clear_data_button"
            style="@style/GeneralButtonStyle"
            android:text="@string/storage_clean" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/save_type" />

        <RadioGroup
            android:id="@+id/save_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingStart="18dp">

            <RadioButton
                android:id="@+id/not_save"
                style="@style/RadioButtonStyle"
                android:text="@string/save_type_none" />

            <View style="@style/HorizontalLineStyle" />

            <RadioButton
                android:id="@+id/only_save_text"
                style="@style/RadioButtonStyle"
                android:text="@string/save_type_text" />

            <View style="@style/HorizontalLineStyle" />

            <RadioButton
                android:id="@+id/only_save_sound"
                style="@style/RadioButtonStyle"
                android:text="@string/save_type_sound" />

            <View style="@style/HorizontalLineStyle" />

            <RadioButton
                android:id="@+id/both_save"
                style="@style/RadioButtonStyle"
                android:text="@string/save_type_text_sound" />
        </RadioGroup>

        <TextView
            android:id="@+id/save_button"
            style="@style/RoundButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/storage_save"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>