<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ota_version_title"
                style="@style/CategoryStyle"
                android:text="@string/ota_system_version" />

            <RelativeLayout
                android:id="@+id/ll_ota_version"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ota_version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="58dp"
                    android:text="@string/ota_current_version_title"
                    android:textColor="@color/settings_primary_color"
                    android:textSize="@dimen/settings_primary_size" />

                <TextView
                    android:id="@+id/ota_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="18dp"
                    android:textColor="@color/settings_secondary_color"
                    android:textSize="@dimen/settings_primary_size" />
            </RelativeLayout>

            <TextView
                android:id="@+id/ota_update_title"
                style="@style/CategoryStyle"
                android:text="@string/ota_check_version" />

            <RadioGroup
                android:id="@+id/ota_auto_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingStart="18dp">

                <RadioButton
                    android:id="@+id/ota_radio_button"
                    style="@style/RadioButtonStyle"
                    android:text="@string/ota_manual" />

                <View style="@style/HorizontalLineStyle" />

                <RadioButton
                    android:id="@+id/ota_radio_button1"
                    style="@style/RadioButtonStyle"
                    android:text="@string/ota_auto" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ota_version_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ota_latest_version"
                    android:textColor="@color/settings_secondary_color"
                    android:textSize="@dimen/settings_primary_size"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/ota_button"
                    style="@style/RoundButtonStyle"
                    android:layout_marginTop="20dp"
                    android:text="@string/ota_update_button"
                    android:textColor="@color/settings_primary_color"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/checkota_button"
                    style="@style/RoundButtonStyle"
                    android:text="@string/checkota_button"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/settings_primary_color" />
            </LinearLayout>

            <TextView
                android:id="@+id/ota_message_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:padding="5dp"
                android:text="@string/ota_message_title"
                android:textColor="@color/settings_secondary_color"
                android:textSize="@dimen/settings_primary_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ota_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/settings_secondary_color"
                android:textSize="@dimen/settings_primary_size"
                android:visibility="gone" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/ota_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

</ScrollView>